unpackaged/main/default/objects/C_C_order_Cancellation_and_Reminder__mdt/C_C_order_Cancellation_and_Reminder__mdt.object-meta.xml
<CustomObject>
    <label>C&amp;C order - Cancellation and Reminder</label>
    <pluralLabel>C&amp;C orders - Cancellation and Reminder</pluralLabel>
</CustomObject>