unpackaged/main/default/objects/C_C_order_Cancellation_and_Reminder__mdt/fields/ByPass__c.field-meta.xml
<CustomField>
    <fullName>ByPass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ByPass</label>
    <type>Checkbox</type>
</CustomField>