unpackaged/main/default/objects/C_C_order_Cancellation_and_Reminder__mdt/fields/isInMinutes__c.field-meta.xml
<CustomField>
    <fullName>isInMinutes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isInMinutes</label>
    <type>Checkbox</type>
</CustomField>