unpackaged/main/default/objects/C_C_order_Cancellation_and_Reminder__mdt/fields/nbrOfDaysBeforeCancellation__c.field-meta.xml
<CustomField>
    <fullName>nbrOfDaysBeforeCancellation__c</fullName>
    <description>nbr Of Days Before Cancellation</description>
    <label>nbrOfDaysBeforeCancellation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>