unpackaged/main/default/objects/C_C_order_Cancellation_and_Reminder__mdt/fields/nbrOfDaysBeforeReminder__c.field-meta.xml
<CustomField>
    <fullName>nbrOfDaysBeforeReminder__c</fullName>
    <description>nbr Of Days Before Reminder</description>
    <label>nbrOfDaysBeforeReminder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>